crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__type_decls-5.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(r#\"type Foo<T = \"foo\"> = {bar: T};\"#)"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 31,
                    },
                },
                span: 0..31,
                kind: TypeDecl(
                    TypeDecl {
                        declare: false,
                        id: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 5,
                                },
                                end: Position {
                                    line: 0,
                                    column: 8,
                                },
                            },
                            span: 5..8,
                            name: "Foo",
                        },
                        type_ann: TypeAnn {
                            kind: Object(
                                ObjectType {
                                    elems: [
                                        Prop(
                                            TProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 23,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 29,
                                                    },
                                                },
                                                span: 23..29,
                                                name: "bar",
                                                optional: false,
                                                mutable: false,
                                                type_ann: TypeAnn {
                                                    kind: TypeRef(
                                                        TypeRef {
                                                            name: "T",
                                                            type_args: None,
                                                        },
                                                    ),
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 28,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 29,
                                                        },
                                                    },
                                                    span: 28..29,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ],
                                },
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 22,
                                },
                                end: Position {
                                    line: 0,
                                    column: 30,
                                },
                            },
                            span: 22..30,
                            inferred_type: None,
                        },
                        type_params: Some(
                            [
                                TypeParam {
                                    span: 9..18,
                                    name: Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 10,
                                            },
                                        },
                                        span: 9..10,
                                        name: "T",
                                    },
                                    constraint: None,
                                    default: Some(
                                        TypeAnn {
                                            kind: Lit(
                                                Str(
                                                    Str {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 13,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 18,
                                                            },
                                                        },
                                                        span: 13..18,
                                                        value: "foo",
                                                    },
                                                ),
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 13,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 18,
                                                },
                                            },
                                            span: 13..18,
                                            inferred_type: None,
                                        },
                                    ),
                                },
                            ],
                        ),
                    },
                ),
            },
        ],
    },
)
